compile_fail_tests/lifetime_any.stderr
error[E0597]: `array_1` does not live long enough
 --> compile_fail_tests/lifetime_any.rs
  |
  |         let array_1 = [1, 2, 3, 4, 5];
  |             ------- binding `array_1` declared here
  |         let slice_1 = DynSlice::<dyn Any>::new(&array_1);
  |                                                ^^^^^^^^ borrowed value does not live long enough
  |         slice_1.downcast_slice::<i32>().unwrap()
  |     };
  |     - `array_1` dropped here while still borrowed
